@@ -867,6 +867,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-commander">
+    <version release="gnome-2.6">
+      <component name="gnome-commander" dir="gnome-commander" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-commander"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-control-center">
     <version release="gnome-2.4">
       <component name="gnome-control-center" dir="gnome-control-center" group="desktop">
