@@ -1,3 +1,7 @@
+2003-12-01  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-commander.
+
 2003-11-28  Christian Neumair  <chris@gnome-de.org>
 
 	* translation-status.xml: Moved libgnomecups/gnome-cups-manager back
